--- a/blue-red/video/resultsCustomization.css
+++ b/blue-red/video/resultsCustomization.css
@@ -17,7 +17,7 @@
     --spacerWidth: 1vh;
 
     /* normally these do not need to change */
-    --categoryWidth: 10ch;
+    --categoryWidth: 11ch;
     --liftResultWidth: 6ch;
 
     /* to show these columns 
@@ -65,4 +65,18 @@
 :host .dark table.results {
     --spacerWidth: 1vh;
     --rowSmallSpacerHeight: 0; /* set to 0.25vh if transparent background */
+}
+
+td.flags div img {
+    height: calc(var(--athleteNameFontSize)*0.8);
+    margin: 1vh;
+    align-self: center;
+    border: 1px;
+    border-style: solid;
+}
+td.flags div {
+    height: calc(var(--athleteNameFontSize)*0.8);
+    line-height: calc(var(--athleteNameFontSize)*0.8);
+    align-self: center;
+    display: flex;
 }
