--- a/transparent/video/resultsCustomization.css
+++ b/transparent/video/resultsCustomization.css
@@ -19,7 +19,7 @@
     --spacerWidth: 1vh;
 
     /* normally these do not need to change */
-    --categoryWidth: 10ch;
+    --categoryWidth: 11ch;
     --categoryVisibility: visible;
 
     --liftResultWidth: 6ch;
@@ -105,7 +105,7 @@ td.flags div img {
 }
 td.flags div {
     height: calc(var(--athleteNameFontSize)*0.8);
-    line-height:  var(--athleteNameFontSize);
+    line-height: calc(var(--athleteNameFontSize)*0.8);
     align-self: center;
     display: flex;
 }
